# saltype

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
doc/source/: api.rst  conf.py  index.rst  introduction.rst
gendoc/: Makefile  api.rst  conf.py  index.rst  introduction.rst  make.bat
salt/: __init__.py  datatype.py  tools.py
salty/: datatype.py  tools.py
src/saltype/: __init__.py  datatype.py  tools.py
unittest/: test_symbolic.py  test_tools.py
