[metadata]
name = saltype
version = 1.2
# attr: saltype._version.VERSION
author = Volker Siepmann
author_email= volker.siepmann@gmail.com,
description = Symbolic algebra light type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VolkerSiep/saltype
keywords = symbolic algebra
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.extras_require]
dev =
    Sphinx
    pytest
