[metadata]
name = saltype
version = 1.3
# attr: saltype._version.VERSION
author = Volker Siepmann
author_email= volker.siepmann@gmail.com,
description = Symbolic algebra light type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VolkerSiep/saltype
keywords = symbolic algebra
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.9
install_requires =
    numpy

[options.extras_require]
dev =
    Sphinx
    pytest
